--- a/Api/2.css
+++ b/Api/2.css
@@ -17,41 +17,38 @@ body {
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 30px;
     padding-bottom: 8px;
-
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
 
 li {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     margin-bottom: 20px;
 }
 
 img {
     border-radius: 50%;
-    border: 1px solid black;
+    border: 5px outset rgb(117, 110, 110);
     margin-right: 20px;
-}
-
-h2,
-p {
-
-    margin: 0;
 }
 
 p {
 
     margin-left: 35px;
     font-size: 14px;
-    color: #666;
+    color: #000000;
+}
+
+#ChampionDescription {
+    font-size: 13px;
+    color: #181616;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 label {
@@ -64,10 +61,25 @@ input[type="text"] {
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    transition: border-color 0.3s ease;
+    
 }
 
 input[type="text"]:focus {
     border-color: #007bff;
     outline: none;
+}
+input[type="checkbox"] {
+    margin-right: 8px;
+    background-image: url("star_106651.png");
+    background-size: 40px;
+}
+input[type="button"]{
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin-left: 210px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
